<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/pleiades" android:padding="30dip"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_gravity="center">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:layout_marginBottom="25dip" android:textSize="24.5sp"
			android:text="@string/main_title" />
		<Button android:id="@+id/new_button" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/new_game_label" />
		<Button android:id="@+id/resume_button" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/resume_label" />
		<Button android:id="@+id/add_button" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/add_schema_label" />
		<Button android:id="@+id/settings_button" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/settings_label" />
		<Button android:id="@+id/about_button" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/about_label" />
	</LinearLayout>
</LinearLayout>
